# eventshuffle-rs

./: Cargo.toml  Dockerfile  Dockerfile.dev  docker-compose.dev.yaml  docker-compose.yaml  mise.toml
migrations/: 20251025082221_create_tables.sql
src/: main.rs
